<resources>
    <string name="app_name">Projet_android_motard</string>
    <string name="nom">nom</string>
    <string name="prenom">prenom</string>
    <string name="adresse">adresse</string>
    <string name="envoi">envoi</string>
    <string name="inscription">inscription</string>
    <string name="enregistrer">enregistrer</string>
    <string name="email">email</string>
    <string name="connexion">connexion</string>
    <string name="mdp">mdp</string>
    <string name="ma_liste">ma liste</string>
    <string name="titre_all_zone">Zones dangereuse</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to login -->


</resources>
