<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="condorcet.projet_android_motard.MainActivity_inscription">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="388dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbmdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/mdp" />

        <EditText
            android:id="@+id/edmdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword">


        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="324dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/edemail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress">


        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="260dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbtel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/tel" />

        <EditText
            android:id="@+id/edtel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10">


        </EditText>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_titre"
        android:layout_width="88dp"
        android:layout_height="22dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:text="INSCRIPTION"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/inscription" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbnom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/nom" />

        <EditText
            android:id="@+id/ednom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName">


        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="116dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbprenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/prenom" />

        <EditText
            android:id="@+id/edprenom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName">


        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/lbadr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="100sp"
            android:text="@string/adresse" />

        <EditText
            android:id="@+id/edadr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPostalAddress">


        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_envoi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="456dp"
        android:text="@string/enregistrer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
