<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="condorcet.projet_android_motard.MainActivity_connexion">

    <EditText
        android:id="@+id/mdp_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="68dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress|textPassword"
        app:layout_constraintStart_toEndOf="@+id/txt_mdp"
        app:layout_constraintTop_toBottomOf="@+id/email_connexion">


    </EditText>

    <EditText
        android:id="@+id/email_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="84dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/txt_email"
        app:layout_constraintTop_toTopOf="parent">


    </EditText>

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="41dp"
        android:layout_height="26dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_mdp"
        android:layout_width="38dp"
        android:layout_height="33dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="92dp"
        android:text="@string/mdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_email" />

    <Button
        android:id="@+id/btn_connexion_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="120dp"
        android:text="@string/connexion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdp_connexion" />
</android.support.constraint.ConstraintLayout>
